[package]
name = "blizzard-protocol"
version = "0.1.0"
edition = "2021"
description = "Delightfully simple delay-tolerant network protocol"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/ellenhp/blizzard/"
keywords = ["no-std", "no_std", "cryptography", "crypto", "dtn"]
categories = ["command-line-interface"]
readme = "../README.md"

[dependencies]
snow = { path = "../snow" }
hkdf = "0.12"
sha2 = { version = "0.10", default-features = false }
snafu = { version = "0.7", default-features = false, features = ["rust_1_61"] }
xorf = { version = "0.8", features = ["serde"] }
bincode = "1.3"
async-trait = "0.1"
rand = { version = "0.8", default-features = false }

[dev-dependencies]
rand = "0.8"
